--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app",
-    "dev": "nodemon app"
+    "start": "nodemon --inspect app",
+    "dev": "nodemon app",
+    "deploy": "firebase deploy --only functions:api"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,14 @@
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "webpack-cli": "^5.0.1"
+  },
+  "engines": {
+    "node": "16"
   }
 }
