sua dbConfig.js(để test thử)

--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --inspect app",
-    "dev": "nodemon app",
-    "deploy": "firebase deploy --only functions:api"
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "keywords": [],
   "author": "",
